--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ pages:
           - 'Performance tips': 'cygnus-ngsi/installation_and_administration_guide/performance_tips.md'
           - 'NGSIv2 support': 'cygnus-ngsi/installation_and_administration_guide/ngsiv2_support.md'
           - 'IPv6 support': 'cygnus-ngsi/installation_and_administration_guide/ipv6_support.md'
+          - 'Deprecated and removed functionality': 'cygnus-ngsi/installation_and_administration_guide/deprecated_and_removed.md'
           - 'Sanity checks': 'cygnus-ngsi/installation_and_administration_guide/sanity_checks.md'
           - 'Diagnosis procedures': 'cygnus-ngsi/installation_and_administration_guide/diagnosis_procedures.md'
           - 'Reporting issues and contact information': 'cygnus-ngsi/installation_and_administration_guide/issues_and_contact.md'
