[1299][cygnus][Dockerfile] Fix issue in agent.conf

--- a/docker/cygnus-ngsi/agent.conf
+++ b/docker/cygnus-ngsi/agent.conf
@@ -131,7 +131,7 @@ cygnus-ngsi.sinks.hdfs-sink.oauth2_token =
 #cygnus-ngsi.sinks.hdfs-sink.krb5_auth = false
 
 cygnus-ngsi.sinks.cartodb-sink.type = com.telefonica.iot.cygnus.sinks.NGSICartoDBSink
-cygnus-ngsi.sinks.cartodb-sink.type = cartodb-channel
+cygnus-ngsi.sinks.cartodb-sink.channel = cartodb-channel
 #cygnus-ngsi.sinks.cartodb-sink.enable_grouping = false
 #cygnus-ngsi.sinks.cartodb-sink.enable_name_mappings = false
 #cygnus-ngsi.sinks.cartodb-sink.enable_lowercase = false
