[1299][cygnus][docker] Update some files

--- a/docker/cygnus-ngsi/agent.conf
+++ b/docker/cygnus-ngsi/agent.conf
@@ -136,7 +136,7 @@ cygnus-ngsi.sinks.cartodb-sink.channel = cartodb-channel
 #cygnus-ngsi.sinks.cartodb-sink.enable_name_mappings = false
 #cygnus-ngsi.sinks.cartodb-sink.enable_lowercase = false
 #cygnus-ngsi.sinks.cartodb-sink.data_model = dm-by-entity
-cygnus-ngsi.sinks.cartodb-sink.keys_conf_file = 
+cygnus-ngsi.sinks.cartodb-sink.keys_conf_file = /opt/apache-flume/conf/cartodb_keys.conf
 #cygnus-ngsi.sinks.cartodb-sink.flip_coordinates = false
 #cygnus-ngsi.sinks.cartodb-sink.enable_raw = false
 #cygnus-ngsi.sinks.cartodb-sink.enable_distance = false
